--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -4,13 +4,37 @@
 html, body {
   padding: 0;
   margin: 0;
-  background: radial-gradient(circle, #5c47ff, #fcb36e);
+  background: radial-gradient(circle, #5c47ff, #0aceb0);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1, h2 {
+  color: #ffffff;
+  text-shadow: 0 0 3px #00b4f0, 0 0 10px #0c18bd, 0 0 20px #000e66, 0 0 30px #0052a3, 0 0 40px #13048c;
+}
+
+p {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 10px 0;
+  text-shadow: 0 0 5px #000;
+}
+
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 /* Navbar specific styles */
@@ -38,6 +62,9 @@ a {
 
 .button:hover {
   background-color: #e93e00;
+
+}.button:active {
+  transform: scale(0.97);
 }
 
 strong {
@@ -50,3 +77,26 @@ strong {
   transition: background-color 0.3s; /* Smooth transition for backgro*/
 }
 
+.balance-display {
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+}
+.balance-title {
+  font-size: 2.25rem;
+  color: #fff;
+  text-shadow: 0 0 5px, 0 0 10px #00c5e3;
+}
+
+.balance-amount {
+  font-size: 1.5rem;
+  color: #00ff00;
+  text-shadow: 0 0 5px #00ff00, 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00;
+}
+
+.error {
+  color: red;
+  margin-top: 10px;
+}
